--- a/meet-irl/app/index.html
+++ b/meet-irl/app/index.html
@@ -21,7 +21,17 @@
   <!--our angular app-->
   <script src="services/users/users.js"></script>
 
+  <!--add pokemon service-->
+  <script src="services/pokemon/pokemon.js"></script>
+
   <script src="components/users/users.js"></script>
+  
+  <!--add profile component-->
+  <script src="components/profile/profile.js"></script>
+  
+  <!--add our missingno component-->
+  <script src="components/missingno/missingno.js"></script>
+
   <script src="app.js"></script>
 </head>
 
